
1. This feature works even on standard server without special software. But if you want to use at it's maximum runing node server is required.
Inspiration come from, without these libraries it would be impossible to do all that :)
https://code.google.com/p/mutation-summary/
https://github.com/abbakym/mutationsummary-cobrowsing-experiment

execute doc/update_db/update_94.sql for update

2.15v

1. Option to choose auto responder for specific department.
https://github.com/LiveHelperChat/livehelperchat/issues/547

2. Option to allow send file in offline chat form
https://github.com/LiveHelperChat/livehelperchat/issues/370

3. Instead of banning e-mails which are very easy to fake, there is option to ban not only single ip but also IP ranges.
https://github.com/LiveHelperChat/livehelperchat/issues/546

4. Will be recorded time when user has left a chat
https://github.com/LiveHelperChat/livehelperchat/issues/535

5. Adjusted position of user typing text indicator
https://github.com/LiveHelperChat/livehelperchat/issues/532

5. Posibility to edit main chat information. At the moment only user nick and e-mail address
https://github.com/LiveHelperChat/livehelperchat/issues/504

execute doc/update_db/update_93.sql for update

2.14v

This release is maintenence release with few enhancements

1. Option to pass identifier. It can be either some specific value or if not provided it will be referer URL.
Also new variable in template can be used {url_view} it will be link to filled form view instead of download link.
https://github.com/LiveHelperChat/livehelperchat/issues/563
2. Chat window in browsing information tab will show is user on page still or not. Option "Track is user still on site, chat status checks also has to be enabled" has to be enabled.