@@ -42,7 +42,13 @@ html, body {
     width: 100%;
     margin-bottom:0;
 }
-
+#center-layout{
+	height:100%;
+	margin:0 auto;
+	-webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
+}
 #contentWrap {
     border: 0;
     position: absolute;
@@ -50,6 +56,7 @@ html, body {
     left: 0;
     right: 0;
     bottom: 0;
+    background-color:#F0F0F0;
 }
 #content {
     width: 100%;
